k8s/manifiests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
            
      containers:
      - name: go-web-app
        image: baby6ix/go-web-app:IMAGE_TAG
        ports:
        - containerPort: 8080
